// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Check Box Check Box 1`] = `
<div
  className="selector selector-medium my-checkbox-class"
>
  <input
    aria-disabled={false}
    aria-label="Label"
    checked={true}
    disabled={false}
    id="myCheckBoxId"
    name="myCheckBoxName"
    onChange={[Function]}
    readOnly={true}
    type="checkbox"
    value="label"
  />
  <label
    className=""
    htmlFor="myCheckBoxId"
  >
    <span
      className="checkmark"
    />
    <span
      className="selector-label selector-label-end"
    >
      Label
    </span>
  </label>
</div>
`;

exports[`Storyshots Check Box Check Box Group 1`] = `
<div
  checked={true}
  className="checkbox-group vertical checkbox-group-medium"
  defaultChecked={
    Array [
      "First",
    ]
  }
  role="group"
>
  <div
    className="selector selector-medium"
  >
    <input
      aria-disabled={false}
      checked={false}
      disabled={false}
      id="test-1"
      name="group"
      onChange={[Function]}
      readOnly={true}
      type="checkbox"
      value="First"
    />
    <label
      className=""
      htmlFor="test-1"
    >
      <span
        className="checkmark"
      />
      <span
        className="selector-label selector-label-end"
      >
        First
      </span>
    </label>
  </div>
  <div
    className="selector selector-medium"
  >
    <input
      aria-disabled={false}
      checked={false}
      disabled={false}
      id="test-2"
      name="group"
      onChange={[Function]}
      readOnly={true}
      type="checkbox"
      value="Second"
    />
    <label
      className=""
      htmlFor="test-2"
    >
      <span
        className="checkmark"
      />
      <span
        className="selector-label selector-label-end"
      >
        Second
      </span>
    </label>
  </div>
  <div
    className="selector selector-medium"
  >
    <input
      aria-disabled={false}
      checked={false}
      disabled={false}
      id="test-3"
      name="group"
      onChange={[Function]}
      readOnly={true}
      type="checkbox"
      value="Third"
    />
    <label
      className=""
      htmlFor="test-3"
    >
      <span
        className="checkmark"
      />
      <span
        className="selector-label selector-label-end"
      >
        Third
      </span>
    </label>
  </div>
</div>
`;

exports[`Storyshots Check Box Check Box Long Text 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }
>
  <div
    className="selector selector-medium my-checkbox-class"
  >
    <input
      aria-disabled={false}
      aria-label="Label"
      checked={true}
      disabled={false}
      id="myCheckBoxId"
      name="myCheckBoxName"
      onChange={[Function]}
      readOnly={true}
      type="checkbox"
      value="label"
    />
    <label
      className=""
      htmlFor="myCheckBoxId"
    >
      <span
        className="checkmark"
      />
      <span
        className="selector-label selector-label-end"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
      </span>
    </label>
  </div>
</div>
`;
